<resources>
    <string name="app_name">practical10</string>
    <string name="login">Login</string>
    <string name="guni">GUNI</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t have an Account??</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="conform_password">Conform password</string>
    <string name="city">City</string>
    <string name="phone_number">Phone Number</string>
    <string name="userlogo">userlogo</string>
    <string name="username">username</string>
    <string name="logout">LogOut</string>
    <string name="personal_information">Personal Information</string>
    <string name="description">Description</string>
    <string name="it_is_typeface_font_file_which_contains_icons_which_are_vector_images_each_icon_has_a_unique_code_and_by_using_the_respective_code_we_can_display_the_icons_in_our_app_these_icons_can_be_scaled_just_like_a_text_in_a_textview">It is Typeface Font File which contains icons which are vector images. Each icon has a unique code and by using the respective code, we can display the icons in our app. These icons can be scaled just like a text in a TextView</string>
    <string name="dashboard">Dashboard</string>
    <string name="notes">Notes</string>
    <string name="stop">stop</string>
    <string name="note_tittle">Note Tittle</string>
    <string name="subtitle">SubTitLe</string>
    <string name="note_description">Note Description</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="tittle">Tittle</string>
    <string name="sub_tittle">Sub Tittle</string>
    <string name="date_and_time_will_display_here">Date and time will display here</string>
    <string name="todo1">TODO1</string>
    <string name="todo">TODO</string>
    <string name="alarm">Alarm</string>
    <string name="current_date_and_time">Current Date and Time</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="time">time</string>
    <string name="this_is_the_result_activity_opened_from_the_notification">This is the result activity opened from the notification</string>
    <string name="your_detail_of_notification">your detail of notification...</string>
    <string name="reminder_time">reminder time</string>
    <string name="textview">TextView</string>
    <string name="gallary">Gallary</string>
</resources>